2008-07-04  Johan Dahlin  <johan@flumotion.com>

	* data/glade/httpstreamer-wizard.glade:
	Do not hard code a width of the mount point entry
	* flumotion/wizard/httpstreamersteps.py:
	Include the muxer format in the url, so instead of 'audio-video'
	it's now 'ogg-audio-video', to avoid collissions, part of #995

	* flumotion/admin/gtk/addformatwizard.py:
	* flumotion/wizard/configurationwizard.py:
	Set a scenario for the format wizard and update the component
	names of the scenario when the change if one is set, fixes
	a regression in the add format wizard.

2008-07-04  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/productionsteps.py:
	Add back accidentally removed _() alias

2008-07-03  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/common/format.py:
	* flumotion/component/converters/overlay/overlay.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/productionsteps.py:
	Always import N_ instead of defining it.

2008-07-03  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/common.py:
	* flumotion/common/connection.py:
	* flumotion/common/keycards.py:
	* flumotion/test/test_common.py:
	Remove mergeImplements which has not been necessary since
	zope.interface was added to twisted.

2008-07-02  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/Makefile.am:
	* flumotion/common/common.py:
	* flumotion/common/poller.py:
	* flumotion/component/bouncers/bouncer.py:
	* flumotion/component/bouncers/plug.py:
	* flumotion/component/component.py:
	* flumotion/component/padmonitor.py:
	Move f.c.common.poller to a new file
	called f.c.poller. Update callsites and Makefiles

2008-07-02  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/common.py:
	* flumotion/common/format.py:
	* flumotion/component/consumers/disker/disker.py:

	Move f.c.common.strftime to f.c.format, update callsites
	and add documentation.

2008-07-02  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/avltree.py: